// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-patterns-field Renders \`c-patterns-field\` with custom props 1`] = `
<div
  class="layout c-patterns-field column"
>
  <c-collapse-panel-stub
    outline-color="var(--v-error-base)"
    title="Alarm patterns"
  >
    <c-alarm-patterns-field-stub
      disabled="true"
      name="name.alarm_pattern"
      readonly="true"
      required="true"
      value="[object Object]"
      with-type=""
    />
  </c-collapse-panel-stub>
  <c-collapse-panel-stub
    outline-color="var(--v-error-base)"
    title="Entity patterns"
  >
    <c-entity-patterns-field-stub
      disabled="true"
      name="name.entity_pattern"
      readonly="true"
      required="true"
      value="[object Object]"
      with-type=""
    />
  </c-collapse-panel-stub>
  <c-collapse-panel-stub
    outline-color="var(--v-error-base)"
    title="Pbehavior patterns"
  >
    <c-pbehavior-patterns-field-stub
      disabled="true"
      name="name.pbehavior_pattern"
      readonly="true"
      required="true"
      value="[object Object]"
      with-type=""
    />
  </c-collapse-panel-stub>
  <c-collapse-panel-stub
    outline-color="var(--v-error-base)"
    title="Event patterns"
  >
    <c-event-filter-patterns-field-stub
      disabled="true"
      name="name.event_pattern"
      readonly="true"
      required="true"
    />
  </c-collapse-panel-stub>
  <c-collapse-panel-stub
    outline-color="var(--v-error-base)"
    title="Total entity patterns"
  >
    <c-entity-patterns-field-stub
      disabled="true"
      name="name.total_entity_pattern"
      readonly="true"
      required="true"
      with-type=""
    />
  </c-collapse-panel-stub>
  <c-collapse-panel-stub
    outline-color="var(--v-error-base)"
    title="Service weather patterns"
  >
    <c-service-weather-patterns-field-stub
      disabled="true"
      name="name.weather_service_pattern"
      required="true"
      with-type=""
    />
  </c-collapse-panel-stub>
  <c-alert-stub
    transition="fade-transition"
    type="warning"
  >
    <span>
      The patterns you've defined targets about 0 items. It can affect performance, are you sure ?
    </span>
  </c-alert-stub>
  <div
    class="layout justify-end align-center"
  >
    <span
      class="text-caption text--secondary error--text"
    >
      At least one pattern has to be defined. Please define filter patterns for rule
    </span>
    <!---->
    <button
      class="mr-0 ml-4 v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default"
      disabled="disabled"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Check filter
      </span>
    </button>
  </div>
</div>
`;

exports[`c-patterns-field Renders \`c-patterns-field\` with default props 1`] = `
<div
  class="layout c-patterns-field column"
>
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <!---->
  <c-alert-stub
    transition="fade-transition"
    type="warning"
  >
    <span>
      The patterns you've defined targets about 0 items. It can affect performance, are you sure ?
    </span>
  </c-alert-stub>
  <div
    class="layout justify-end align-center"
  >
    <span
      class="text-caption text--secondary"
    />
    <!---->
    <button
      class="mr-0 ml-4 v-btn v-btn--disabled v-btn--has-bg theme--light v-size--default"
      disabled="disabled"
      type="button"
    >
      <span
        class="v-btn__content"
      >
      Check filter
      </span>
    </button>
  </div>
</div>
`;
